add_executable(HelloWorld HelloWorld.cpp)
add_executable(EnumerateTest EnumerateTest.cpp)
add_executable(Structures Structures.cpp)
add_executable(Tuple Tuple.cpp)
add_executable(Copy_of_var Copy_of_var.cpp)
add_executable(References References.cpp)
add_executable(Pointer Pointer.cpp)
add_executable(Constancy Constancy.cpp)
add_executable(References_in_cycle References_in_cycle.cpp)
add_executable(Function Function.cpp)
add_executable(Recurtinon_Function Recurtion_Function.cpp)
add_executable(ArgumentsOfFunction ArgumentsOfFunction.cpp)
add_executable(ComparatorFunctions ComparatorFunctions.cpp)
add_executable(LambdaFunction LambdaFunction.cpp)