add_executable(HelloWorld HelloWorld.cpp)
add_executable(EnumerateTest EnumerateTest.cpp)
add_executable(Structures Structures.cpp)
add_executable(Tuple Tuple.cpp)
add_executable(Copy_of_var Copy_of_var.cpp)
add_executable(References References.cpp)
add_executable(Pointer Pointer.cpp)
add_executable(Constancy Constancy.cpp)
add_executable(References_in_cycle References_in_cycle.cpp)
add_executable(Function Function.cpp)
add_executable(Recurtinon_Function Recurtion_Function.cpp)
add_executable(ArgumentsOfFunction ArgumentsOfFunction.cpp)
add_executable(ComparatorFunctions ComparatorFunctions.cpp)
add_executable(LambdaFunction LambdaFunction.cpp)
add_executable(ArgMax ArgMax.cpp)
add_executable(CommonPrefix CommonPrefix.cpp)
add_executable(SplitFunction SplitFunction.cpp)
add_executable(JoinFunction JoinFunction.cpp)
add_executable(TransposeMatrix TransposeMatrix.cpp)
add_executable(SortingPoints SortingPoints.cpp)
add_executable(FunctionOverloading FunctionOverloading.cpp)
add_executable(TemplateFunctions TemplateFunctions.cpp)
add_executable(OverloadingTemplateFunctions OverloadingTemplateFunctions.cpp)
add_executable(TemplateStructures TemplateStructures.cpp)